# ACA---MPI_Ricerca_Genoma-

./: .gitignore  CMakeLists.txt  README.md
MPI/ACA/: .gitignore  main.c  pattern.txt  test_genome.txt
MPI/ACA/Libraries/: boyermoore.c  boyermoore.h  hash_funct.c  hash_funct.h  utilities.c  utilities.h
Report/files_results/: FATCLUSTER_SINGLEREGION.txt  LIGHTCLUSTER_MULTIREGION16CORE.txt  LIGHTCLUSTER_MULTIREGION_8CORE.txt  LIGHTCLUSTER_SINGLEREGION.txt  SCALABILITY.txt
Report/plots_code/: Grafici_collisioni.m  Grafici_hash.m  Grafici_scalabilita.m  Plot_Amdahl.m
Serial/ACA/: hash_funct.h  pattern.txt  serial  serial.c  test_genome.txt
Serial/ACA/Libraries/: hash_funct.c  hash_funct.h  utilities.c  utilities.h
